# Rag-MultiMedia

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  app.py  pyproject.toml
docs/: report.md  video_script.md
eval/: questions.json  results.md  run_eval.py
scripts/: make_fixture_pdf.py
src/: __init__.py  caption.py  chunk.py  config.py  generate.py  index.py  ingest.py  retrieve.py  router.py  utils.py
tests/: conftest.py  test_chunk.py  test_config.py  test_generate.py  test_index.py  test_retrieve.py  test_router.py
