[project]
name = "imf-multimodal-rag"
version = "0.1.0"
description = "Multimodal RAG over IMF Article IV reports — text, tables, and images unified via captioning, grounded with mandatory citations."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Ahmed Kahla" }]

dependencies = [
    "docling>=2.0",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "groq>=0.11",
    "google-genai>=0.3",
    "streamlit>=1.36",
    "ragas>=0.2",
    "typer>=0.12",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "pymupdf>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "mypy>=1.11",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
