[project]
name = "imf-multimodal-rag"
version = "0.1.0"
description = "Multimodal RAG over IMF Article IV reports — text, tables, and images unified via captioning, grounded with mandatory citations."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Ahmed Kahla" }]

dependencies = [
    "docling>=2.0",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "groq>=0.11",
    "google-genai>=0.3",
    "streamlit>=1.36",
    "ragas>=0.2",
    "typer>=0.12",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "pymupdf>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "mypy>=1.11",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
# E501: line length is handled by line-length=100.
# B008: Typer apps use `typer.Option(...)` / `typer.Argument(...)` as default
# values — that's the canonical pattern and is not a real B008 issue.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
ignore_missing_imports = true
# These third-party libraries ship incomplete / private type stubs that trip
# `mypy --strict` without reflecting real bugs:
#   - docling / docling_core re-export ADTs via __init__ without __all__ (attr-defined).
#   - google-genai typing requires Content/Part dicts but accepts strings at runtime.
#   - sentence-transformers CrossEncoder.predict wants an invariant list type.
disable_error_code = ["attr-defined", "arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
